compiler/tools/fpp-check/test/event/format_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/format_not_numeric.fpp: 3.49
  event E(a: bool) severity activity low format "{x}"
                                                ^
error: invalid format string: bool is not an integer type
